Affichage de la liste des pouvoirs et ajout du nom pour l'item pouvoir

--- a/lang/fr.json
+++ b/lang/fr.json
@@ -17,6 +17,17 @@
         "peuple": {
           "label": "Peuple"
         },
+        "potentiel": {
+          "pouvoirs": {
+            "label": "Potentiel"
+          },
+          "atouts": {
+            "label": "Potentiel"
+          },
+          "maitrises": {
+            "label": "Potentiel"
+          }
+        },
         "harmoniques": {
           "ame": {
             "valeur": {
