--- a/lang/fr.json
+++ b/lang/fr.json
@@ -268,6 +268,7 @@
       "actionPhysique": "Action Physique",
       "actionMentale": "Action Mentale",
       "actionPerceptive": "Action Perceptive",
+      "nom": "Nom",
       "peuple": "Peuple",
       "cle": "Clef",
       "gamme": "Gamme",
