Push sur la branche ; qq coprrections de css + ajout des jetons

--- a/lang/fr.json
+++ b/lang/fr.json
@@ -275,7 +275,7 @@
       "ton": "Ton",
       "conscienceVal" : "Conscience",
       "conscienceMax": " Conscience Max",
-      "modeEdition": "Bascule entre le Mode Éditer et le Mode Jouer",
+      "modeEdition": "Bascule entre le Mode « Éditer » et le Mode « Jouer »",
       "complicationsListe": "Complications :",
       "complications": {
         "une": {
