Ajout Atouts + Maîtrises + peaufinage de l'interface

--- a/lang/fr.json
+++ b/lang/fr.json
@@ -299,6 +299,8 @@
         "valeur": "⌞Valeur"
       },
       "pouvoirs": "Pouvoirs",
+      "atouts": "Atouts",
+      "maitrises": "Maitrises magiques",
       "potentiel": "Potentiel"
     },
     "Settings": {
