--- a/lang/fr.json
+++ b/lang/fr.json
@@ -293,7 +293,8 @@
       "maitrises": "Maitrises magiques",
       "potentiel": "Potentiel",
       "creerJetons": "(pensez a en creer pour preserver vos jetons)",
-      "clicJetons": "Clic pour retourner un jeton de Conscience. Clic-droit pour ajouter / perdre un jeton de Conscience."
+      "clicJetons": "Clic pour retourner un jeton de Conscience. Clic-droit pour ajouter / perdre un jeton de Conscience.",
+      ""
     },
     "Settings": {
       "styleJeu": {
