Réorganisation zone Timbre en mode Jouer (hors version Kit) afin qu'elle ressemble à disposition de fiche papier

--- a/lang/fr.json
+++ b/lang/fr.json
@@ -294,7 +294,9 @@
       "potentiel": "Potentiel",
       "jeton": "Jeton",
       "creerJetons": "(pensez a en creer pour preserver vos jetons)",
-      "clicJetons": "Clic pour dépenser ou réactiver un jeton. <br>Clic-droit pour perdre ou ajouter un jeton."
+      "clicJetons": "Clic pour dépenser ou réactiver un jeton. <br>Clic-droit pour perdre ou ajouter un jeton.",
+      "timbre": "Timbre",
+      "peste": "Peste"
     },
     "Settings": {
       "styleJeu": {
