Ajout CSS Items

--- a/lang/fr.json
+++ b/lang/fr.json
@@ -276,7 +276,7 @@
       }
     },
     "tab": {
-      "datas": "Données",
+      "datas": "Datas",
       "descriptions": "Description"
     },
     "ui": {
