Ajout autre CSS Items

--- a/lang/fr.json
+++ b/lang/fr.json
@@ -304,7 +304,9 @@
       "conscienceMax": " Max",
       "modeEdition": "Bascule entre le Mode « Éditer » et le Mode « Jouer »",
       "complicationsListe": "Complications :",
+      "pouvoir": "Pouvoir",
       "pouvoirs": "Pouvoirs",
+      "atout": "Atout",
       "atouts": "Atouts",
       "maitrises": "Maitrises magiques",
       "potentiel": "Potentiel",
