Simplification de quelques clés et déplacement du tooltip de description sur le nom

--- a/lang/fr.json
+++ b/lang/fr.json
@@ -327,26 +327,16 @@
       "clicJetons": "Clic pour dépenser ou réactiver un jeton. <br>Clic-droit pour perdre ou ajouter un jeton.",
       "timbre": "Timbre",
       "peste": "Peste",
-      "atoutNom": "Nom",
-      "atoutNew": "Nouvel atout",
-      "atoutEdit": "Modifier",
-      "atoutDelete": "Supprimer",
-      "atoutCreate": "Ajouter un atout",
-      "pouvoirNom": "Nom",
-      "pouvoirType": "Type",
+      "edit": "Modifier",
+      "delete": "Supprimer",
+      "create": "Ajouter {item}",
+      "type": "Type",
+      "atoutNew": "Nouvel atout",      
       "pouvoirNew": "Nouveau pouvoir",
-      "pouvoirEdit": "Modifier",
-      "pouvoirDelete": "Supprimer",
-      "pouvoirCreate": "Ajouter un pouvoir",
-      "maitriseNom": "Nom",
-      "maitriseHarmonique": "Harmonique",
-      "maitrisePrerequis": "Prerequis",
       "maitriseNew": "Nouvelle maîtrise",
-      "maitriseEdit": "Modifier",
-      "maitriseDelete": "Supprimer",
-      "maitriseCreate": "Ajouter une maîtrise"
-
-
+      "harmonique": "Harmonique",
+      "prerequis": "Prerequis",
+      "niveau": "Niveau"
     },
     "warnings": {
       "jetonsDepassement": "Trop de jetons sélectionnés",
