Amélioration des messages affichés

--- a/lang/fr.json
+++ b/lang/fr.json
@@ -341,7 +341,7 @@
     "warnings": {
       "jetonsDepassement": "Trop de jetons sélectionnés",
       "jetonsConscienceInsuffisants": "Vous avez demandé {demande} jeton(s) de conscience alors qu'il ne vous en reste plus que {actuel} !",
-      "jetonsReserveInsuffisants": "Vous avez demandé {demande} jeton(s) de la réserve collégiale alors qu'il ne vous en reste plus que {actuel} !"
+      "jetonsReserveInsuffisants": "Vous avez demandé {demande} jeton(s) de la réserve collégiale alors qu'il n'en reste actuellement plus que {actuel} !"
     },
     "Settings": {
       "styleJeu": {
