Soucis d'affichage des fenêtre des nouveaux items réglés

--- a/lang/fr.json
+++ b/lang/fr.json
@@ -342,6 +342,14 @@
         "description": {
           "label": "Description"
         }
+      },
+      "type": {
+        "adverse": {
+          "label": "Action adverse"
+        },
+        "dissonance": {
+          "label": "Action de dissonance"
+        }
       }
     },
     "Intrigue": {
