Ajout des actions Edit/Delete/Add

--- a/lang/fr.json
+++ b/lang/fr.json
@@ -402,6 +402,8 @@
       "pouvoirNew": "Nouveau pouvoir",
       "maitriseNew": "Nouvelle maîtrise",
       "actionNew": "Nouvelle action",
+      "actionDissonanceNew": "Nouvelle action de dissonance",
+      "actionAdverseNew": "Nouvelle action adverse",
       "intrigueNew": "Nouvelle intrigue",
       "harmonique": "Harmonique",
       "prerequis": "Prerequis",
