Sauvegarde de secours

--- a/lang/fr.json
+++ b/lang/fr.json
@@ -24,6 +24,9 @@
     },
     "Eminence": {
       "FIELDS": {
+        "description": {
+          "label": "Description"
+        },
         "peuple": {
           "label": "Peuple"
         },
