Affichage jetons conscience dispo dans fiche d'Eminence

--- a/lang/fr.json
+++ b/lang/fr.json
@@ -381,7 +381,8 @@
       "gamme": "Gamme",
       "ton": "Ton",
       "conscienceVal": "Actuelle",
-      "conscienceMax": " Max",
+      "conscienceMax": "Max",
+      "conscienceDispo": "Dispo",
       "modeEdition": "Bascule entre le Mode « Éditer » et le Mode « Jouer »",
       "complicationsListe": "Complications :",
       "pouvoir": "Pouvoir",
