--- a/lang/fr.json
+++ b/lang/fr.json
@@ -394,6 +394,12 @@
       "intrigues": "Intrigues",
       "potentiel": "Potentiel",
       "jeton": "Jeton",
+      "jetons": "Jetons",
+      "jetonsDepenser": "Nombre de jetons à dépenser :",
+      "jetonsDepenseAuto": "Dépense automatique",
+      "reserveCollegiale": "Réserve collégiale",
+      "jetonsConscienceRestant" : "Nombre de jetons de conscience restant",
+      "jetonsConscienceRestantOuvertureFenetre": "Nombre de jetons restant dans la réserve collégiale au moment de l'ouverture de cette fenêtre",
       "creerJetons": "(pensez a en creer pour preserver vos jetons)",
       "clicJetons": "Clic pour dépenser ou réactiver un jeton. <br>Clic-droit pour perdre ou ajouter un jeton.",
       "timbre": "Timbre",
@@ -411,7 +417,15 @@
       "intrigueNew": "Nouvelle intrigue",
       "harmonique": "Harmonique",
       "prerequis": "Prerequis",
-      "niveau": "Niveau"
+      "niveau": "Niveau",
+      "niveau:" : "Niveau : ",
+      "bonusTotal": "Bonus total",
+      "formule": "Formule",
+      "plutotDeMerveilleux": "Plutôt le Dé merveilleux",
+      "actionCollegiale": "Action collégiale",
+      "effetMagique": "Effet magique",
+      "lancerDes": "Lancer les dés"
+
     },
     "warnings": {
       "jetonsDepassement": "Trop de jetons sélectionnés",
