Prise en compte de DiceSoNice lors des relances, correction de l'affichage de chat en mode privé

--- a/lang/fr.json
+++ b/lang/fr.json
@@ -424,8 +424,8 @@
       "plutotDeMerveilleux": "Plutôt le Dé merveilleux",
       "actionCollegiale": "Action collégiale",
       "effetMagique": "Effet magique",
-      "lancerDes": "Lancer les dés"
-
+      "lancerDes": "Lancer les dés",
+      "jetHarmonique": "Jet d'harmonique"
     },
     "warnings": {
       "jetonsDepassement": "Trop de jetons sélectionnés",
