--- a/lang/fr.json
+++ b/lang/fr.json
@@ -400,7 +400,7 @@
       "reserveCollegiale": "Réserve collégiale",
       "jetonsConscienceRestant" : "Nombre de jetons de conscience restant",
       "jetonsConscienceRestantOuvertureFenetre": "Nombre de jetons restant dans la réserve collégiale au moment de l'ouverture de cette fenêtre",
-      "creerJetons": "(pensez a en creer pour preserver vos jetons)",
+      "creerJetons": "(pensez à en créer pour préserver vos jetons)",
       "clicJetons": "Clic pour dépenser ou réactiver un jeton. <br>Clic-droit pour perdre ou ajouter un jeton.",
       "timbre": "Timbre",
       "peste": "Peste",
