--- a/lang/fr.json
+++ b/lang/fr.json
@@ -302,7 +302,7 @@
     "Adversaire": {
       "FIELDS": {
         "description": {
-            "label": "Description"
+          "label": "Description"
         },
         "adversite": {
           "valeur": {
@@ -398,7 +398,7 @@
       "jetonsDepenser": "Nombre de jetons à dépenser :",
       "jetonsDepenseAuto": "Dépense automatique",
       "reserveCollegiale": "Réserve collégiale",
-      "jetonsConscienceRestant" : "Nombre de jetons de conscience restant",
+      "jetonsConscienceRestant": "Nombre de jetons de conscience restant",
       "jetonsConscienceRestantOuvertureFenetre": "Nombre de jetons restant dans la réserve collégiale au moment de l'ouverture de cette fenêtre",
       "creerJetons": "(pensez à en créer pour préserver vos jetons)",
       "clicJetons": "Clic pour dépenser ou réactiver un jeton. <br>Clic-droit pour perdre ou ajouter un jeton.",
@@ -408,7 +408,7 @@
       "delete": "Supprimer",
       "create": "Ajouter {item}",
       "type": "Type",
-      "atoutNew": "Nouvel atout",      
+      "atoutNew": "Nouvel atout",
       "pouvoirNew": "Nouveau pouvoir",
       "maitriseNew": "Nouvelle maîtrise",
       "actionNew": "Nouvelle action",
@@ -418,7 +418,7 @@
       "harmonique": "Harmonique",
       "prerequis": "Prerequis",
       "niveau": "Niveau",
-      "niveau:" : "Niveau : ",
+      "niveau:": "Niveau : ",
       "bonusTotal": "Bonus total",
       "formule": "Formule",
       "plutotDeMerveilleux": "Plutôt le Dé merveilleux",
@@ -451,6 +451,15 @@
     },
     "ReserveCollegiale": {
       "title": "Réserve Collégiale"
+    },
+    "Sidebar": {
+      "title": "Pénombre",
+      "support": "Support",
+      "discordLaFonderie": "Discord de la Fonderie",
+      "discordLaFonderieTooltip": "Rejoignez le serveur francophone dédié à Foundry VTT",
+      "menu": "Système",
+      "reserve": "Réserve collégiale",
+      "reserveTooltip": "Ouvre la Réserve collégiale"
     }
   }
 }
